Separate project into modules